log
Thu 07 Sep 2023 04:56:23 AM UTC: 
 tests:  0|6
total_score: 0/70
5cb0459
Sun 10 Sep 2023 02:39:59 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
2c2b527
Sun 10 Sep 2023 02:41:21 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|6
total_score: 0/70
05c6133
Sun 10 Sep 2023 02:42:21 AM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  4|5
total_score: 20/70
70a12b3
Sun 10 Sep 2023 04:20:57 AM UTC: 
 hashmap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:63:5: error: expected expression before ‘long’
   63 |     long oldCapacity = map->capacity;
      |     ^~~~
hashmap.c:63:5: error: ‘return’ with a value, in function returning void [-Werror=return-type]
hashmap.c:60:6: note: declared here
   60 | void enlarge(HashMap * map) {
      |      ^~~~~~~
hashmap.c:68:26: error: ‘oldCapacity’ undeclared (first use in this function)
   68 |     for (long i = 0; i < oldCapacity; i++) {
      |                          ^~~~~~~~~~~
hashmap.c:68:26: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:70:28: error: ‘oluckets’ undeclared (first use in this function); did you mean ‘oldBuckets’?
   70 |             insertMap(map, oluckets[i]->key, oldBuckets[i]->value);
      |                            ^~~~~~~~
      |                            oldBuckets
cc1: all warnings being treated as errors
Compilation failed
29f0ffa
Sun 10 Sep 2023 04:21:09 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:70:28: error: ‘oluckets’ undeclared (first use in this function); did you mean ‘oldBuckets’?
   70 |             insertMap(map, oluckets[i]->key, oldBuckets[i]->value);
      |                            ^~~~~~~~
      |                            oldBuckets
hashmap.c:70:28: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ba93797
Sun 10 Sep 2023 04:21:35 AM UTC: 
 hashmap.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:73:37: error: expected ‘;’ before ‘free’
   73 |             free(oldBuckets[i]->key)
      |                                     ^
      |                                     ;
   74 |             free(oldBuckets[i])
      |             ~~~~                     
hashmap.c: At top level:
hashmap.c:81:5: error: data definition has no type or storage class [-Werror]
   81 |     free(oldBuckets);
      |     ^~~~
hashmap.c:81:5: error: type defaults to ‘int’ in declaration of ‘free’ [-Werror=implicit-int]
hashmap.c:81:5: error: parameter names (without types) in function declaration [-Werror]
hashmap.c:81:5: error: conflicting types for ‘free’; have ‘int()’
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:555:13: note: previous declaration of ‘free’ with type ‘void(void *)’
  555 | extern void free (void *__ptr) __THROW;
      |             ^~~~
In file included from test.c:4:
hashmap.c:82:1: error: expected identifier or ‘(’ before ‘}’ token
   82 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0013436
Sun 10 Sep 2023 04:21:45 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:74:32: error: expected ‘;’ before ‘}’ token
   74 |             free(oldBuckets[i])
      |                                ^
      |                                ;
   75 |         }
      |         ~                       
hashmap.c: At top level:
hashmap.c:81:5: error: data definition has no type or storage class [-Werror]
   81 |     free(oldBuckets);
      |     ^~~~
hashmap.c:81:5: error: type defaults to ‘int’ in declaration of ‘free’ [-Werror=implicit-int]
hashmap.c:81:5: error: parameter names (without types) in function declaration [-Werror]
hashmap.c:81:5: error: conflicting types for ‘free’; have ‘int()’
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:555:13: note: previous declaration of ‘free’ with type ‘void(void *)’
  555 | extern void free (void *__ptr) __THROW;
      |             ^~~~
In file included from test.c:4:
hashmap.c:82:1: error: expected identifier or ‘(’ before ‘}’ token
   82 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
af91ff0
Sun 10 Sep 2023 04:21:54 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:81:5: error: data definition has no type or storage class [-Werror]
   81 |     free(oldBuckets);
      |     ^~~~
hashmap.c:81:5: error: type defaults to ‘int’ in declaration of ‘free’ [-Werror=implicit-int]
hashmap.c:81:5: error: parameter names (without types) in function declaration [-Werror]
hashmap.c:81:5: error: conflicting types for ‘free’; have ‘int()’
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:555:13: note: previous declaration of ‘free’ with type ‘void(void *)’
  555 | extern void free (void *__ptr) __THROW;
      |             ^~~~
In file included from test.c:4:
hashmap.c:82:1: error: expected identifier or ‘(’ before ‘}’ token
   82 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0c51639
Sun 10 Sep 2023 04:22:31 AM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  5|4
total_score: 30/70
caf8f48
